--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -1,24 +1,28 @@
-
+h1 a {
+	color: #FCA205;
+	font-family: 'Lobster';
+}
+body {
+	padding-left: 15px;
+}
 .page-header{
-	background-color: #A3D6F0;
+	background-color: #ff9400;
 	margin-top: 0;
 	padding: 20px 20px 20px 40px; 
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
     color: #ffffff;
-    font-size: 54pt;
-    font-family: 'Fredericka the Great';
+    font-size: 36pt;
     text-decoration: none;
 }
 
 .content {
-    margin-top: 80px;
-    margin-left: 80px;
+    margin-left: 40px;
 }
 
-h1 , h2, h3, h4{
-    font-family: 'Baloo', cursive;
+h1, h2, h3, h4 {
+    font-family: 'Lobster', cursive;
 }
 
 .date {
@@ -46,8 +50,5 @@ h1 , h2, h3, h4{
 }
 
 .post h1 a, .post h1 a:visited {
-    color: #3C7896;
-}
-.comment {
-    margin: 20px 0px 20px 20px;
+    color: #000000;
 }
