--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -1,9 +1,7 @@
 {% extends "blog/base.html" %}
 
 {% block content %}
-    {% if form.errors %}
-        <p>Your username and password didn't match. Please try again.</p>
-    {% endif %}
+    
 
     <form method="post" action="{% url 'login' %}">
     {% csrf_token %}
@@ -17,8 +15,14 @@
             <td>{{ form.password }}</td>
         </tr>
         </table>
-
-        <input type="submit" value="login" />
+        <a class="login_button">
+            <button type="submit" class="save btn btn-default">Login</button>
+        </a>
         <input type="hidden" name="next" value="{{ next }}" />
     </form>
+
+    {% if form.errors %}
+        <p>Your username and password didn't match. Please try again.</p>
+        <p>Need To Register?  ->  <a href="{% url 'register' %}" ><span class="glyphicon glyphicon-plus"></span></a></p>
+    {% endif %}
 {% endblock %}
