--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -23,6 +23,6 @@
 
     {% if form.errors %}
         <p>Your username and password didn't match. Please try again.</p>
-        <p>Need To Register?  ->  <a href="{% url 'register' %}" ><span class="glyphicon glyphicon-plus"></span></a></p>
+        <p>Need To Register?  ->  <a href="{% url 'register' %}" ><span class="glyphicon glyphicon-plus-sign"></span></a></p>
     {% endif %}
 {% endblock %}
