--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -13,9 +13,13 @@
 			    	{% if user.is_authenticated %}
 			    		<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
 			    		<a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
-			    		<p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
+			    		<a href="{% url 'fileupload' %}" class="top-menu"><span class="glyphicon glyphicon-upload"></span></a>
+			    		<p class="top-menu">Hello {{ user.username }} <a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-out"></a></p>
+
 			    	{% else %}
-			            <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
+			            <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-log-in"></span></a>
+			            <a href="{% url 'register' %}" class="top-menu"><span class="glyphicon glyphicon-plus-sign"></span></a>
+
 			        {% endif %}
 			        <h1><a href="/">The 24th's Blog Project</a></h1>
 			    </div>
