--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,15 +11,37 @@
         	<body>
 			    <div class="page-header">
 			    	{% if user.is_authenticated %}
-			    		<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-			    		<a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
-			    		<a href="{% url 'fileupload' %}" class="top-menu"><span class="glyphicon glyphicon-upload"></span></a>
-			    		<p class="top-menu">Hello {{ user.username }} <a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-out"></a></p>
 
+			    		<a href="{% url 'post_new' %}" class="top-menu">
+			    			<span class="glyphicon glyphicon-plus"></span>
+			    		</a>
+			    		<a href="{% url 'post_draft_list' %}" class="top-menu">
+			    			<span class="glyphicon glyphicon-edit"></span>
+			    		</a>
+			    		<a href="{% url 'fileupload' %}" class="top-menu">
+			    			<span class="glyphicon glyphicon-upload"></span>
+			    		</a>
+			    		<a href="{% url 'mypage' %}" class="top-menu">
+			    			<span class="glyphicon glyphicon-user"></span>
+			    		</a>
+			    		
+			    		<p class="top-menu">Hello {{ user.username }} 
+			    			<a href="{% url 'logout' %}">
+			    				<span class="glyphicon glyphicon-log-out"></span>
+			    			</a>
+			    		</p>
 			    	{% else %}
-			            <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-log-in"></span></a>
-			            <a href="{% url 'register' %}" class="top-menu"><span class="glyphicon glyphicon-plus-sign"></span></a>
-
+			            <a href="{% url 'login' %}" class="top-menu">
+		            		<span class="glyphicon glyphicon-log-in ">
+		            		</span> 
+			            </a>
+			            
+			            <a href="{% url 'register' %}" class="top-menu">
+				            <span class="glyphicon glyphicon-plus-sign"></span> 
+			            </a>
+			            <div class="tooltip">Hover over me
+						  <span class="tooltiptext">Tooltip text</span>
+						</div>
 			        {% endif %}
 			        <h1><a href="/">The 24th's Blog Project</a></h1>
 			    </div>
