--- a/blog/templates/registration/register.html
+++ b/blog/templates/registration/register.html
@@ -3,25 +3,26 @@
 {% block content %}
     <form method="post" action="{% url 'register' %}">{% csrf_token %}
         <table>
-        <tr>
-            <td>{{ form.username.label_tag }}</td>
-            <td>{{ form.username }}</td>
-        </tr>
-        <tr>
-            <td>{{ form.email.label_tag }}</td>
-            <td>{{ form.email }}</td>
-        </tr>
-        <tr>
-            <td>{{ form.password.label_tag }}</td>
-            <td>{{ form.password }}</td>
-        </tr>
+            <tr>
+                <td>{{ form.username.label_tag }}</td>
+                <td>{{ form.username }}</td>
+            </tr>
+            <tr>
+                <td>{{ form.email.label_tag }}</td>
+                <td>{{ form.email }}</td>
+            </tr>
+            <tr>
+                <td>{{ form.password.label_tag }}</td>
+                <td>{{ form.password }}</td>
+            </tr>
 
-        <tr>
-            <td>{{ form.password_check.label_tag }}</td>
-            <td>{{ form.password_check }}</td>
-        </tr>
+            <tr>
+                <td>{{ form.password_check.label_tag }}</td>
+                <td>{{ form.password_check }}</td>
+            </tr>
         </table>
-        <button type="submit" class="save btn btn-default">REGISTER</button>
+        <button type="submit" class="save btn btn-default">REGISTER
+        </button>
         <input type="hidden" name="next" value="{{ next }}" />
     </form>
 {% endblock %}
