--- a/blog/templates/registration/register_wrong.html
+++ b/blog/templates/registration/register_wrong.html
@@ -5,24 +5,25 @@
             <h1>Error! Wrong Input</h1>
             <h2>Try Again</h2>
         <table>
-        <tr>
-            <td>{{ form.username.label_tag }}</td>
-            <td>{{ form.username }}</td>
-        </tr>
-        <tr>
-            <td>{{ form.email.label_tag }}</td>
-            <td>{{ form.email }}</td>
-        </tr>
-        <tr>
-            <td>{{ form.password.label_tag }}</td>
-            <td>{{ form.password }}</td>
-        </tr>
-        <tr>
-            <td>{{ form.password_check.label_tag }}</td>
-            <td>{{ form.password_check }}</td>
-        </tr>
+            <tr>
+                <td>{{ form.username.label_tag }}</td>
+                <td>{{ form.username }}</td>
+            </tr>
+            <tr>
+                <td>{{ form.email.label_tag }}</td>
+                <td>{{ form.email }}</td>
+            </tr>
+            <tr>
+                <td>{{ form.password.label_tag }}</td>
+                <td>{{ form.password }}</td>
+            </tr>
+            <tr>
+                <td>{{ form.password_check.label_tag }}</td>
+                <td>{{ form.password_check }}</td>
+            </tr>
         </table>
-        <button type="submit" class="save btn btn-default">REGISTER</button>
+        <button type="submit" class="save btn btn-default">REGISTER
+        </button>
         <input type="hidden" name="next" value="{{ next }}" />
     </form>
 {% endblock %}
