--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,36 +12,38 @@
 			    <div class="page-header">
 			    	{% if user.is_authenticated %}
 
-			    		<a href="{% url 'post_new' %}" class="top-menu">
+			    		<a href="{% url 'post_new' %}" class="top-menu" data-toggle="tooltip" data-placement="bottom" title="Write Post">
 			    			<span class="glyphicon glyphicon-plus"></span>
 			    		</a>
-			    		<a href="{% url 'post_draft_list' %}" class="top-menu">
+			    		<a href="{% url 'post_draft_list' %}" class="top-menu" data-toggle="tooltip" data-placement="bottom" title="Draft List">
 			    			<span class="glyphicon glyphicon-edit"></span>
 			    		</a>
-			    		<a href="{% url 'fileupload' %}" class="top-menu">
+
+
+						<a href="{% url 'fileupload' %}" class="top-menu" data-toggle="tooltip" data-placement="bottom" title="File Upload">
 			    			<span class="glyphicon glyphicon-upload"></span>
 			    		</a>
-			    		<a href="{% url 'mypage' %}" class="top-menu">
-			    			<span class="glyphicon glyphicon-user"></span>
-			    		</a>
-			    		
-			    		<p class="top-menu">Hello {{ user.username }} 
-			    			<a href="{% url 'logout' %}">
-			    				<span class="glyphicon glyphicon-log-out"></span>
+
+
+						<p class = "top-menu">Hello,  
+							<a href="{% url 'logout' %}" class = "top-menu" data-toggle="tooltip" data-placement="bottom" title="Log Out">
+			    				<span class="glyphicon glyphicon-log-out "></span>
 			    			</a>
-			    		</p>
+				    		<a href="{% url 'mypage' %}" class="top-menu">{{ user.username }}
+				    		</a>
+				    		
+				    	</p>
+
+			    		
 			    	{% else %}
-			            <a href="{% url 'login' %}" class="top-menu">
+			            <a href="{% url 'login' %}" class="top-menu" data-toggle="tooltip" data-placement="bottom" title="Log In">
 		            		<span class="glyphicon glyphicon-log-in ">
 		            		</span> 
 			            </a>
-			            
-			            <a href="{% url 'register' %}" class="top-menu">
+
+			            <a href="{% url 'register' %}" class="top-menu" data-toggle="tooltip" data-placement="bottom" title="Register">
 				            <span class="glyphicon glyphicon-plus-sign"></span> 
 			            </a>
-			            <div class="tooltip">Hover over me
-						  <span class="tooltiptext">Tooltip text</span>
-						</div>
 			        {% endif %}
 			        <h1><a href="/">The 24th's Blog Project</a></h1>
 			    </div>
