--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="post">
-        {% if user.is_authenticated %}
+        {% if currentuser == post.author.pk %}
             {% if post.published_date %}
                 <div class="date">
                     {{ post.published_date }}
@@ -10,29 +10,40 @@
             {% else %}
                 <a class="btn btn-default" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
             {% endif %}
-            <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-            <a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
+            <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}">
+                <span class="glyphicon glyphicon-pencil"></span>
+            </a>
+            <a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}">
+                <span class="glyphicon glyphicon-remove"></span>
+            </a>
         {% endif %}
-        <h1>{{ post.title }}</h1>
+        <h1 class = "middletitle">{{ post.title }}</h1>
+            <div class="postauthor">
+                <p>AUTHOR : {{ post.author }}</p>
+            </div>
         <p>{{ post.text|linebreaksbr }}</p>
+
         <a href="{% url 'post_detail' pk=post.pk %}">Comments: {{ post.comments.count }}</a>
     </div>
     <hr>
     <a class="btn btn-default" href="{% url 'add_comment_to_post' pk=post.pk %}">Add comment</a>
     {% for comment in post.comments.all %}
-        {% if user.is_authenticated or comment.approved_comment %}
+        {% if currentusername == comment.author or comment.approved_comment %}
         <div class="comment">
             <div class="date">
                 {{ comment.created_date }}
+            </div>
+            {% if currentusername == comment.author %}
                 {% if not comment.approved_comment %}
-                    <a class="btn btn-default" href="{% url 'comment_remove' pk=comment.pk %}">
-                        <span class="glyphicon glyphicon-remove"></span>
-                    </a>
                     <a class="btn btn-default" href="{% url 'comment_approve' pk=comment.pk %}">
                         <span class="glyphicon glyphicon-ok"></span>
                     </a>
                 {% endif %}
-            </div>
+                    <a class="btn btn-default" href="{% url 'comment_remove' pk=comment.pk %}">
+                        <span class="glyphicon glyphicon-remove"></span>
+                    </a>
+            {% endif %}
+            <br/>
             <strong>{{ comment.author }}</strong>
             <p>{{ comment.text|linebreaks }}</p>
         </div>
