--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -43,7 +43,7 @@
 			            </a>
 
 			        {% endif %}
-			        <h1><a href="/">The 24th's Blog</a></h1>
+			        <h1><a href="/">The 24th's Board</a></h1>
 			    </div>
 
 			    <div class="content container">
